[package]
name = "coinpayments"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["coinpayments", "api"]
categories = ["web-programming", "api-bindings"]
description = "Coinpayments API"
repository = "https://github.com/apibillme/coinpayments"
readme = "README.md"

[dependencies]
